--- a/purchase_request_site/templates/login.html
+++ b/purchase_request_site/templates/login.html
@@ -11,7 +11,7 @@
 <body class="login-body">
     <div class="login-container">
         <div class="login-header">
-            <h1>🔐 Login Required</h1>
+            <h1>🔐 LOOOOLLLLL Required</h1>
             <p>Please enter your credentials to access the Purchase Request Site</p>
         </div>
 
