add login and logout routers

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -14,7 +14,7 @@
             <h1>Purchase Request Dashboard</h1>
             <div class="dashboard-user-info">
                 <a href="/edit-profile?user_email={{ user_email }}" class="edit-profile-btn">✏️ Edit Information</a>
-                <a href="/logout" class="logout-btn">Logout</a>
+                <a href="/auth/logout" class="logout-btn">Logout</a>
             </div>
         </div>
 
