--- a/src/templates/success.html
+++ b/src/templates/success.html
@@ -43,7 +43,7 @@
       <h3>What would you like to do next?</h3>
       <a href="/dashboard?user_email={{ user_email if user_email else '' }}&use_saved=true"
         class="success-btn-secondary">🏠 Return to Dashboard</a>
-      <a href="/logout" class="success-btn-secondary">🚪 Logout</a>
+      <a href="/auth/logout" class="success-btn-secondary">🚪 Logout</a>
     </div>
 
     <div
