--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -24,7 +24,7 @@
         </div>
         {% endif %}
 
-        <form method="POST" action="/login">
+        <form method="POST" action="/auth/login">
             <div class="login-form-group">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required placeholder="macid@mcmaster.ca" value="{{ email or '' }}">
