Add: update logout btn to be consistent with edit-info-btn

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -740,6 +740,7 @@ h1 {
     background: #c82333;
     text-decoration: none;
     color: white;
+    transform: translateY(-1px);
 }
 
 .dashboard-success-message {
