Fix: Go to Home redirects back to login page instead of dashboard

--- a/src/templates/success.html
+++ b/src/templates/success.html
@@ -41,8 +41,8 @@
 
     <div class="success-actions">
       <h3>What would you like to do next?</h3>
-      <a href="/dashboard?user_email={{ user_email if user_email else '' }}&use_saved=true"
-        class="success-btn-secondary">🏠 Return to Dashboard</a>
+      <a href="/login"
+        class="success-btn-secondary">🏠 Go to Home</a>
       <a href="/logout" class="success-btn-secondary">🚪 Logout</a>
     </div>
 
